Corrigindo importaçoes da classe MetaDTO